tests/ui/parser/keyword-const-as-identifier.stderr
error: expected `{`, found `=`
  --> $DIR/keyword-const-as-identifier.rs:2:15
   |
LL |     let const = "foo";
   |               ^ expected `{`

error: aborting due to 1 previous error

