tests/ui/parser/keyword-const-as-identifier.rs
fn main() {
    let const = "foo";
    //~^ ERROR expected `{`, found `=`
}
